--- a/index.html
+++ b/index.html
@@ -8,25 +8,20 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="first page">
+    <div id="first">
     <div id="header">
-        <h2>NETFLIX</h2>
-        <button>Sign In</button>
+        <img src="assets/netflix-logo11.png" alt="Netflix Logo">
+        <a href="0" class="btn btn-lg">Sign In</a>
     </div>
 
     <div id="about">
         <h1>Unlimited movies, TV <br>shows, and more.</h1>
         <h4>Watch anywhere. Cancel anytime.</h4>
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
-        <form action="get Email">
-            <div class="Email">
-                <label>Email address </label>
-                <input type="email">
-            </div>
-        </form>
-        <button>Get Started &gt;</button>
+        <input type="email" name="email" id="email" placeholder="Email address">
+        <a href="0" class="btn btn-lg">GET STARTED&gt;</a>
     </div>
-</div>
+    </div>
 <div id="uniform background">
 <hr class="divider">
 <div id="second page">
