--- a/index.html
+++ b/index.html
@@ -10,44 +10,49 @@
 <body>
     <div id="first">
     <div id="header">
-        <img src="assets/netflix-logo11.png" alt="Netflix Logo">
-        <a href="0" class="btn btn-lg">Sign In</a>
+        <img src="assets/logo.png" alt="Netflix Logo">
+        <a href="#">Sign In</a>
     </div>
 
     <div id="about">
         <h1>Unlimited movies, TV <br>shows, and more.</h1>
-        <h4>Watch anywhere. Cancel anytime.</h4>
+        <h2>Watch anywhere. Cancel anytime.</h2>
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <input type="email" name="email" id="email" placeholder="Email address">
-        <a href="0" class="btn btn-lg">GET STARTED&gt;</a>
+        <a href="#" class="button">GET STARTED&gt;</a>
     </div>
     </div>
-<div id="uniform background">
 <hr class="divider">
-<div id="second page">
+<div id="second">
+    <div class="dis-left">
     <h1>Enjoy on your TV.</h1>
     <h3>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</h3>
-    <img src="" alt="">
+</div>
+    <img src="assets/image2.png" alt="TV">
 </div>
 <hr class="divider">
-<div id="third page">
-    <img src="" alt="">
+<div id="third">
+    <img src="assets/image3.jpg" alt="">
+    <div class="dis-right">
     <h1>Download your shows to watch offline.</h1>
     <h3>Save your favorites easily and always have something to watch.</h3>
 </div>
+</div>
 <hr class="divider">
-<div id="forth page">
+<div id="forth">
     <h1>Watch everywhere.</h1>
     <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h3>
 </div>
 <hr class="divider">
-<div id="fifth page">
-    <img src="" alt="">
+<div id="fifth">
+    <img src="assets/kids.png" alt="">
+    <div class="dis-right">
     <h1>Create profiles for kids.</h1>
     <h3>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</h3>
 </div>
+</div>
 <hr class="divider">
-<div id="sixth page">
+<div id="sixth">
     <h1>Frequently Asked Questions</h1>
     <dl>
         <dt>What is Netflix?</dt>
@@ -64,13 +69,10 @@
         <dd>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space. <br>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</dd>
       </dl>
       <p>Ready to watch? Enter your email to create or restart your membership.</p>
-        <form action="get Email">
-            <div class="Email">
-                <label>Email address </label>
-                <input type="email">
-            </div>
-        </form>
-        <button>Get Started &gt;</button>
+      <div class="sixth-1"></div>
+      <input type="email" name="email" id="email" placeholder="Email address">
+      <a href="#" class="button">GET STARTED&gt;</a>
+    </div>
 </div>
 <hr class="divider">
 <div id="footer">
@@ -99,7 +101,6 @@
         <li><a href="">Only on Netflix</a></li>
         <li><a href="">Netflix Nigeria</a></li>
       </ul>
-</div>
 </div>
 </body>
 </html>
