--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <h1>Unlimited movies, TV <br>shows, and more.</h1>
         <h2>Watch anywhere. Cancel anytime.</h2>
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
+        <div class="sidegroup">
         <input type="email" name="email" id="email" placeholder="Email address">
         <a href="#" class="button">GET STARTED&gt;</a>
+    </div>
     </div>
     </div>
 <hr class="divider">
@@ -70,10 +72,9 @@
       </dl>
       <p>Ready to watch? Enter your email to create or restart your membership.</p>
       <div class="sixth-1"></div>
-      <input type="email" name="email" id="email" placeholder="Email address">
+      <input type="email" name="email" id="mail" placeholder="Email address">
       <a href="#" class="button">GET STARTED&gt;</a>
     </div>
-</div>
 <hr class="divider">
 <div id="footer">
     <p><a href="">Questions? Contact Us.</a></p>
