--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
         <dd>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space. <br>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</dd>
       </dl>
       <p>Ready to watch? Enter your email to create or restart your membership.</p>
-      <div class="sixth-1"></div>
+      <div class="sixth-1">
       <input type="email" name="email" id="mail" placeholder="Email address">
       <a href="#" class="button">GET STARTED&gt;</a>
+    </div>
     </div>
 <hr class="divider">
 <div id="footer">
