--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     </div>
 <hr class="divider">
 <div id="footer">
-    <p><a href="">Questions? Contact Us.</a></p>
     <ul>
+        <li><a href="">Questions? Contact Us.</a></li>
       <li><a href="">FAQ</a></li>
       <li><a href="">Help Center</a></li>
       <li><a href="">Account</a></li>
