--- a/index.html
+++ b/index.html
@@ -56,20 +56,36 @@
 <hr class="divider">
 <div id="sixth">
     <h1>Frequently Asked Questions</h1>
-    <dl>
-        <dt>What is Netflix?</dt>
-        <dd>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices. <br>You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</dd>
-        <dt>How much does Netflix cost?</dt>
-        <dd>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₦1,200 to ₦4,400 a month. No extra costs, no contracts.</dd>
-        <dt>Where can I watch?</dt>
-        <dd>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles. <br>You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</dd>
-        <dt>How do I cancel?</dt>
-        <dd>Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</dd>
-        <dt>What can I watch on Netflix?</dt>
-        <dd>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</dd>
-        <dt>Is Netflix good for kids?</dt>
-        <dd>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space. <br>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</dd>
-      </dl>
+    <details>
+        <summary>What is Netflix?</summary>
+        <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices. 
+            You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</p>
+    </details>
+    <hr class="faqbtw">
+    <details>
+        <summary>How much does Netflix cost?</summary>
+        <p>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₦1,200 to ₦4,400 a month. No extra costs, no contracts.</p>
+    </details>
+    <hr class="faqbtw">
+    <details>
+        <summary>Where can I watch?</summary>
+        <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles. <br>You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</p>
+    </details>
+    <hr class="faqbtw">
+    <details>
+        <summary>How do I cancel?</summary>
+        <p>Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
+    </details>
+    <hr class="faqbtw">
+    <details>
+        <summary>What can I watch on Netflix?</summary>
+        <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
+    </details>
+    <hr class="faqbtw">
+    <details>
+        <summary>Is Netflix good for kids?</summary>
+        <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space. <br>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</p>
+    </details>
       <p>Ready to watch? Enter your email to create or restart your membership.</p>
       <div class="sixth-1">
       <input type="email" name="email" id="mail" placeholder="Email address">
